logs/hello.log
  File "<string>", line 1
    "print('hello',
    ^
SyntaxError: unterminated string literal (detected at line 1)
